feat: 게스트 로그인 기능 추가
로그인 없이 지정된 프로젝트(Portfolio)를 읽기 전용으로 볼 수 있는 게스트 입장 기능 구현.
GUEST_USER_ID / GUEST_PROJECT_NAMES 환경변수로 노출 계정과 프로젝트를 제어.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>